fix nft content overflow

--- a/src/index.css
+++ b/src/index.css
@@ -54,12 +54,11 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: auto;
   padding: 32px;
   background-color: #eed2a7;
   border: #c4baac solid;
   border-radius: 3px;
-  width: max-content;
+  width: auto;
 }
 
 .nftFrameContainer {
@@ -69,13 +68,14 @@ input {
   width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  place-items: center;
 }
 
 .nftFrame>div {
   display: flex;
   align-content: flex-start;
   color: green;
+  max-width: 50vw;
 }
 
 .app {
